feat: force node 20

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "packageManager": "pnpm@9.6.0",
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
